# computational-pathology-research

./: .coverage  .coveragerc  .dockerignore  .env.docker  .env.example  .env.production.example  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  ABLATION_RUNNER_FIX_REPORT.md  ADAPTIVE_TILE_SIZING_IMPLEMENTATION.md  ADDITIONAL_ISSUES.md  AUTONOMOUS_SESSION_SUMMARY_2026_04_30.md  CAMELYON_SLIDE_LEVEL_IMPLEMENTATION.md  CAMELYON_TRAINING_STATUS.md  CHANGELOG.md  CHECKPOINT_VALIDATION_COMPLETE.md  CITATION.cff  CI_OPTIMIZATION_PLAN.md  CODE_QUALITY_IMPROVEMENTS_SESSION.md  CODE_REVIEW_FIXES_COMPLETE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_ISSUES_REPORT.md  CONTRIBUTING.md  CRITICAL_FAILURE_POINTS_ROUND2.md  CRITICAL_FAILURE_POINTS_ROUND3.md  CROSS_VALIDATION_STATUS.md  DATA_ACQUISITION_CHECKLIST.md  DATA_ACQUISITION_COMPLETE.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCS_INDEX.md  Dockerfile  FAST_TRAINING_RUNNING.md  FINAL_STATUS.md  FINAL_STATUS_UPDATE.md  FINAL_VALIDATION_SUMMARY.md  FIXES_SUMMARY.md  FOUNDATION_MODEL_STATUS.md  GAPS_IMPLEMENTED.md  (+127 more)
.claude/: settings.local.json
.cursor/: mcp.json
benchmarks/: README.md  manifest.jsonl  summary.md
business/: ENTERPRISE_INFRASTRUCTURE.md
cloud/: README.md
config/: pacs_config.yaml  production.yaml
configs/: pcam_phikon.yaml  train.yaml
coverage_reports/: coverage.json
data/: README.md
dataset_test_results/: ci_summary_20260416_115921.md  ci_summary_20260416_120008.md  ci_summary_20260416_120723.md  coverage_unit.json  latest_summary.md  results_20260416_115847.json  results_20260416_115921.json  results_20260416_120008.json  results_20260416_120114.json  results_20260416_120723.json
deploy/: README.md  api.py  api_secure.py
docker/: Dockerfile.api  Dockerfile.client  Dockerfile.coordinator  Dockerfile.worker  README.md  init-db.sql  nginx.conf  production.env  prometheus.yml
docs/: ABOUT.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BENCHMARK_SYSTEM.md  CAMELYON_SLIDE_LEVEL_IMPLEMENTATION.md  CAMELYON_TRAINING_STATUS.md  CLINICAL_VALIDATION.md  CLINICAL_WORKFLOW_INTEGRATION.md  COMPREHENSIVE_DATASET_TESTING.md  CONTINUOUS_LEARNING.md  DATA_ACQUISITION_GUIDE.md  DEMO_RESULTS.md  DEPLOYMENT.md  DIAGRAM_EXPLANATION.md  DISTRIBUTED_TRACING.md  DOCKER.md  DOCS_INDEX.md  EXPERIMENTS.md  FAILURE_ANALYSIS.md  FAQ.md  FL_INTEGRATION.md  FOUNDATION_MODELS.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  INFERENCE_OPTIMIZATION.md  MODEL_INTERPRETABILITY.md  MULTI_GPU_TRAINING.md  OPTIMIZATION_SUMMARY.md  PACS_INTEGRATION.md  PCAM_BENCHMARK_RESULTS.md  PCAM_COMPARISON_GUIDE.md  PCAM_CROSS_VALIDATION.md  PCAM_FAILURE_ANALYSIS.md  PCAM_FULLSCALE_GUIDE.md  PCAM_REAL_RESULTS.md  PERFORMANCE.md  PERFORMANCE_COMPARISON.md  PORTFOLIO_SUMMARY.md  QUANTIZATION.md  (+17 more)
examples/: README.md  adaptive_tile_sizing_demo.py  api_client.py  attention_visualization_demo.py  audit_logging_demo.py  clinical_classifier_demo.py  clinical_document_parsing.py  clinical_inference.py  clinical_performance_demo.py  clinical_validation_example.py  custom_dataset_tutorial.ipynb  feature_generator_example.py  federated_hospital_client_demo.py  federated_learning_demo.py  longitudinal_analysis.py  longitudinal_tracking_demo.py  memory_monitoring_demo.py  pacs_integration_demo.py  pacs_integration_example.py  patient_context_demo.py  pretraining_example.py  process_batch_slides.py  process_single_slide.py  production_federated_learning_demo.py  quickstart_pcam_training.ipynb  regulatory_compliance_example.py  risk_analysis_example.py  run_demo.py  run_missing_modality_demo.py  run_production_fl_demo.py  run_quick_demo.py  run_quick_demo_simple.py  run_temporal_demo.py  simple_federated_learning_demo.py  streaming_demo.py  test_checkpoint_loading.py  test_checkpoint_loading_simple.py  test_mock_streaming.py  tile_buffer_pool_demo.py  tracing_integration_example.py  (+8 more)
experiments/: BENCHMARK_PLAN.md  README_ANALYSIS.md  __init__.py  analyze_metrics.py  benchmark_competitors.py  benchmark_foundation_models.py  camelyon17_federated_audit.py  compare_attention_models.py  compare_baselines.py  compare_pcam_baselines.py  comprehensive_benchmark_suite.py  evaluate.py  evaluate_camelyon.py  evaluate_pcam.py  generate_camelyon_baseline_heatmap.py  generate_pcam_interpretability.py  generate_stain_normalization_preview.py  registry.py  run_camelyon_feature_baseline.py  run_interpretability.py  run_statistical_analysis.py  statistical_analysis.py  test_dataset_visualization.py  test_visualization.py  tracking.py  train.py  train_camelyon.py  train_ddp.py  train_pcam.py  train_pcam_multigpu.py  train_stain_norm.py  validate_explainability.py  validate_notebook.py
fl_audit_logs/: audit_log_20260501.jsonl
fl_checkpoints/: version_index.json
k8s/: README.md  api-deployment.yaml  (+23 more)
(+1054 files in other folders)
