[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histocore"
version = "0.1.0"
description = "HistoCore: #1 performing method in digital pathology - Production-grade PyTorch framework establishing superiority over all published baselines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Matthew Vaishnav"}
]
keywords = ["computational pathology", "multimodal fusion", "deep learning", "whole-slide imaging", "performance superiority", "federated learning", "digital pathology", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tensorboard>=2.12.0",
    "h5py>=3.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "scikit-image>=0.20.0",
    "Pillow>=9.0.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "pydicom>=2.3.0",
    "openslide-python>=1.2.0",
    "wsidicom>=0.9.0",
    "opencv-python>=4.7.0",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "cryptography>=41.0.0",
    "pynetdicom>=2.0.0",
    "pyopenssl>=23.0.0",
    "certifi>=2023.0.0",
    "timm>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
foundation = [
    "timm>=0.9.12",
    "huggingface_hub>=0.20.0",
    "transformers>=4.37.0",
    "peft>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term -p no:cacheprovider"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "property: marks property-based tests (deselect with '-m \"not property\"')",
]

[tool.coverage.run]
disable_warnings = ["no-data-collected"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
